--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,37 +8,54 @@
     android:orientation="vertical"
     tools:context=".ui.activity.MainActivity">
 
-    <ImageView
-        android:id="@+id/pokemon_image"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_gravity="center"
-        android:layout_marginHorizontal="16dp"
-        android:layout_marginTop="16dp"
-        android:background="@drawable/border"
-        android:backgroundTint="@color/teal_200"
-        android:contentDescription="Foto do pokémon"
-        android:padding="32dp"
-        android:src="@mipmap/bulbasaur" />
-
-    <TextView
-        android:id="@+id/pokemon_description"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/main_picture_cardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginVertical="8dp"
+        app:cardBackgroundColor="@color/emerland"
+        app:cardCornerRadius="5dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/pokemon_image"
+            android:layout_width="wrap_content"
+            android:layout_height="130dp"
+            android:layout_gravity="center"
+            android:layout_marginVertical="32dp"
+            android:backgroundTint="@color/teal_200"
+            android:contentDescription="Foto do pokémon"
+            android:src="@mipmap/bulbasaur" />
+
+    </androidx.cardview.widget.CardView>
+
+    <TextView
+        android:id="@+id/pokemon_description"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginVertical="8dp"
         android:background="@drawable/border"
         android:backgroundTint="@color/teal_700"
         android:minHeight="100dp"
         android:padding="16dp"
         android:text="@string/pokemon_description_bulbasaur"
         android:textColor="@color/white"
-        android:textSize="18sp" />
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="@+id/main_picture_cardView"
+        app:layout_constraintStart_toStartOf="@+id/main_picture_cardView"
+        app:layout_constraintTop_toBottomOf="@+id/main_picture_cardView" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingVertical="16dp" />
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:paddingVertical="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/pokemon_description" />
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
